--- a/seller_profile.html
+++ b/seller_profile.html
@@ -14,9 +14,9 @@
         <div class="settings" onclick="toggleSettings()">
             <span>⚙️ Settings</span>
             <div id="sidebar">
-                <a href="#">Profile</a>
+                <a href="seller_profile.html">Profile</a>
                 <a href="#">Change Password</a>
-                <a href="#">Delete Account</a>
+                <a href="delete_seller_account.html">Delete Account</a>
                 <a href="#">Logout</a>
             </div>
         </div>
