--- a/seller_homepage.html
+++ b/seller_homepage.html
@@ -6,10 +6,159 @@
     <title>Seller Homepage - Comrade-Shoes</title>
     <link rel="stylesheet" href="seller_homepage_styles.css">
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
+    <style>
+        body {
+    font-family: Arial, sans-serif;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+header {
+    background-color: #333;
+    color: white;
+    padding: 10px 20px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+header h1 {
+    margin: 0;
+}
+
+header .settings {
+    background: none;
+    border: none;
+    color: white;
+    font-size: 1.2em;
+    cursor: pointer;
+}
+
+nav {
+    background-color: #444;
+    display: flex;
+    justify-content: center;
+    padding: 10px;
+}
+
+nav a {
+    color: white;
+    padding: 10px;
+    text-decoration: none;
+}
+
+nav a:hover {
+    background-color: #555;
+}
+
+.container {
+    padding: 20px;
+    display: flex;
+    justify-content: center;
+}
+
+.container-buttons {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 10px;
+}
+
+.container-button {
+    background-color: #f4f4f4;
+    padding: 20px;
+    border-radius: 5px;
+    text-align: center;
+    flex: 1;
+    min-width: 200px;
+    cursor: pointer;
+}
+
+.container-button.complete {
+    background-color: #d4edda;
+}
+
+.container-button.pending {
+    background-color: #f8d7da;
+}
+
+#dashboardButton {
+    display: block;
+    margin: 20px auto;
+    padding: 10px 20px;
+    font-size: 1em;
+    cursor: pointer;
+}
+
+#dashboardButton.inactive {
+    background-color: #ccc;
+    cursor: not-allowed;
+}
+
+footer {
+    background-color: #333;
+    color: white;
+    text-align: center;
+    padding: 10px 20px;
+    position: fixed;
+    width: 100%;
+    bottom: 0;
+}
+
+.sidebar {
+    position: fixed;
+    top: 0;
+    left: -250px;
+    width: 250px;
+    height: 100%;
+    background-color: #333;
+    color: white;
+    transition: left 0.3s;
+    padding: 10px;
+}
+
+.sidebar a {
+    display: block;
+    padding: 10px;
+    color: white;
+    text-decoration: none;
+}
+
+.sidebar a:hover {
+    background-color: #444;
+}
+
+#overlay {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+}
+
+@media screen and (max-width: 600px) {
+    header, nav, .container {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .container-buttons {
+        flex-direction: column;
+        width: 100%;
+    }
+
+    .container-button {
+        min-width: 100%;
+    }
+}
+
+    </style>
 </head>
 <body>
     <header>
-        <h1>Seller Homepage -Welcome back, <span id="firstName"></span> <span id="lastName"></span>!</h1>
+        <h1>Seller Homepage - Welcome back, <span id="firstName"></span> <span id="lastName"></span>!</h1>
         <button class="settings" onclick="toggleSidebar()">⚙️Settings</button>
     </header>
     <nav>
@@ -19,23 +168,23 @@
     </nav>
     <div class="container">
         <div class="container-buttons">
-            <div class="container-button complete" id="shopInfoButton">
+            <div class="container-button complete" id="shopInfoButton" onclick="redirectToPage('shop_info.html')">
                 <h2>Shop Information</h2>
                 <p id="shopInfoStatus">Complete ✅</p>
             </div>
-            <div class="container-button pending" id="businessInfoButton">
+            <div class="container-button pending" id="businessInfoButton" onclick="handleButtonClick('businessInfoButton', 'business_info.html', checkBusinessInfo)">
                 <h2>Business Information</h2>
                 <p id="businessInfoStatus">Pending</p>
             </div>
-            <div class="container-button pending" id="shippingButton">
+            <div class="container-button pending" id="shippingButton" onclick="handleButtonClick('shippingButton', 'shipping_info.html', checkShippingInfo)">
                 <h2>Shipping Information</h2>
                 <p id="shippingInfoStatus">Pending</p>
             </div>
-            <div class="container-button pending" id="paymentButton">
+            <div class="container-button pending" id="paymentButton" onclick="handleButtonClick('paymentButton', 'payment_info.html', checkPaymentInfo)">
                 <h2>Payment Information</h2>
                 <p id="paymentInfoStatus">Pending</p>
             </div>
-            <div class="container-button pending" id="additionalButton">
+            <div class="container-button pending" id="additionalButton" onclick="handleButtonClick('additionalButton', 'additional_info.html', checkAdditionalInfo)">
                 <h2>Additional Information</h2>
                 <p id="additionalInfoStatus">Pending</p>
             </div>
@@ -54,115 +203,156 @@
         <a href="#">Change Password</a>
     </div>
 
-    <script src="seller_homepage.js"></script>
+    <!-- Overlay for Sidebar -->
+    <div id="overlay" onclick="closeSidebar()"></div>
     <script>
-        document.addEventListener('DOMContentLoaded', function () {
-            // Event listeners for each button
-            document.getElementById('businessInfoButton').addEventListener('click', function() {
-                handleButtonClick('businessInfoButton', 'business_info.html', checkBusinessInfo);
-            });
-            document.getElementById('shippingButton').
-            addEventListener('click', function() {
-                handleButtonClick('shippingButton', 'shipping_info.html', checkShippingInfo);
-            });
-            document.getElementById('paymentButton').addEventListener('click', function() {
-                handleButtonClick('paymentButton', 'payment_info.html', checkPaymentInfo);
-            });
-            document.getElementById('additionalButton').addEventListener('click', function() {
-                handleButtonClick('additionalButton', 'additional_info.html', checkAdditionalInfo);
-            });
-        });
+        document.addEventListener('DOMContentLoaded', function() {
+    const user = getUserData();
+    if (user) {
+        document.getElementById('firstName').textContent = user.firstName;
+        document.getElementById('lastName').textContent = user.lastName;
+    }
 
-        function handleButtonClick(buttonId, redirectUrl, checkFunction) {
-            const button = document.getElementById(buttonId);
-            const isComplete = checkFunction();
-            if (!isComplete) {
-                window.location.href = redirectUrl;
-            }
-            updateButtonStatus(button, isComplete);
-        }
+    const dashboardButton = document.getElementById('dashboardButton');
+    checkAllComplete(dashboardButton);
 
-        function updateButtonStatus(button, isComplete) {
-            if (isComplete) {
-                button.classList.remove('pending');
-                button.classList.add('complete');
-                button.querySelector('p').textContent = 'Complete ✅';
-            } else {
-                button.classList.remove('complete');
-                button.classList.add('pending');
-                button.querySelector('p').textContent = 'Pending';
-            }
-        }
+    // Initially mark Shop Information as complete
+    updateButtonStatus(document.getElementById('shopInfoButton'), true);
+});
 
-        function toggleSidebar() {
-            const sidebar = document.getElementById('sidebar');
-            sidebar.classList.toggle('open');
-        }
+function handleButtonClick(buttonId, redirectUrl, checkFunction) {
+    const button = document.getElementById(buttonId);
+    const isComplete = checkFunction();
+    if (!isComplete) {
+        window.location.href = redirectUrl;
+    }
+    updateButtonStatus(button, isComplete);
+    checkAllComplete(document.getElementById('dashboardButton'));
+}
 
-        function deleteAccount() {
-            const confirmDelete = confirm('Are you sure you want to delete your account?');
-            if (confirmDelete) {
-                // Implement delete account logic here
-                alert('Account deleted successfully.');
-                window.location.href = 'index.html';
-            }
-        }
+function updateButtonStatus(button, isComplete) {
+    if (isComplete) {
+        button.classList.remove('pending');
+        button.classList.add('complete');
+        button.querySelector('p').textContent = 'Complete ✅';
+    } else {
+        button.classList.remove('complete');
+        button.classList.add('pending');
+        button.querySelector('p').textContent = 'Pending';
+    }
+}
 
-        function checkShopInfo() {
-            const user = getUserData();
-            return user && user.firstName && user.middleName && user.lastName &&
-                   user.nationality && user.nationalId && user.phoneNumber &&
-                   user.location && user.email;
-        }
+function checkAllComplete(dashboardButton) {
+    const allComplete = [
+        checkShopInfo(),
+        checkBusinessInfo(),
+        checkShippingInfo(),
+        checkPaymentInfo(),
+        checkAdditionalInfo()
+    ].every(status => status === true);
 
-        function checkBusinessInfo() {
-            const businessInfo = getBusinessInfo();
-            return businessInfo && businessInfo.businessName && businessInfo.businessType &&
-                   businessInfo.businessRegistrationNumber && businessInfo.businessLocation;
-        }
+    if (allComplete) {
+        dashboardButton.classList.remove('inactive');
+        dashboardButton.disabled = false;
+    } else {
+        dashboardButton.classList.add('inactive');
+        dashboardButton.disabled = true;
+    }
+}
 
-        function checkShippingInfo() {
-            const shippingInfo = getShippingInfo();
-            return shippingInfo && shippingInfo.shippingAddress && shippingInfo.shippingMethod &&
-                   shippingInfo.deliveryTime;
-        }
+function toggleSidebar() {
+    const sidebar = document.getElementById('sidebar');
+    const overlay = document.getElementById('overlay');
+    if (sidebar.style.left === '0px') {
+        closeSidebar();
+    } else {
+        sidebar.style.left = '0px';
+        overlay.style.display = 'block';
+    }
+}
 
-        function checkPaymentInfo() {
-            const paymentInfo = getPaymentInfo();
-            return paymentInfo && paymentInfo.paymentMethod && paymentInfo.cardNumber &&
-                   paymentInfo.expiryDate && paymentInfo.securityCode;
-        }
+function closeSidebar() {
+    const sidebar = document.getElementById('sidebar');
+    const overlay = document.getElementById('overlay');
+    sidebar.style.left = '-250px';
+    overlay.style.display = 'none';
+}
 
-        function checkAdditionalInfo() {
-            const additionalInfo = getAdditionalInfo();
-            return additionalInfo && additionalInfo.additionalDetails1 &&
-                   additionalInfo.additionalDetails2 && additionalInfo.additionalDetails3;
-        }
+function deleteAccount() {
+    const confirmDelete = confirm('Are you sure you want to delete your account?');
+    if (confirmDelete) {
+        // Implement delete account logic here
+        alert('Account deleted successfully.');
+        window.location.href = 'index.html';
+    }
+}
 
-        function getUserData() {
-            const userData = localStorage.getItem('sellerUser');
-            return userData ? JSON.parse(userData) : null;
-        }
+function checkShopInfo() {
+    const user = getUserData();
+    return user && user.firstName && user.middleName && user.lastName &&
+           user.nationality && user.nationalId && user.phoneNumber &&
+           user.location && user.email;
+}
 
-        function getBusinessInfo() {
-            const businessInfo = localStorage.getItem('businessInfo');
-            return businessInfo ? JSON.parse(businessInfo) : null;
-        }
+function checkBusinessInfo() {
+    const businessInfo = getBusinessInfo();
+    return businessInfo && businessInfo.businessName && businessInfo.businessType &&
+           businessInfo.businessRegistrationNumber && businessInfo.businessLocation;
+}
 
-        function getShippingInfo() {
-            const shippingInfo = localStorage.getItem('shippingInfo');
-            return shippingInfo ? JSON.parse(shippingInfo) : null;
-        }
+function checkShippingInfo() {
+    const shippingInfo = getShippingInfo();
+    return shippingInfo && shippingInfo.shippingAddress && shippingInfo.shippingMethod &&
+           shippingInfo.deliveryTime;
+}
 
-        function getPaymentInfo() {
-            const paymentInfo = localStorage.getItem('paymentInfo');
-            return paymentInfo ? JSON.parse(paymentInfo) : null;
-        }
+function checkPaymentInfo() {
+    const paymentInfo = getPaymentInfo();
+    return paymentInfo && paymentInfo.paymentMethod && paymentInfo.cardNumber &&
+           paymentInfo.expiryDate && paymentInfo.securityCode;
+}
 
-        function getAdditionalInfo() {
-            const additionalInfo = localStorage.getItem('additionalInfo');
-            return additionalInfo ? JSON.parse(additionalInfo) : null;
-        }
+function checkAdditionalInfo() {
+    const additionalInfo = getAdditionalInfo();
+    return additionalInfo && additionalInfo.additionalDetails1 &&
+           additionalInfo.additionalDetails2 && additionalInfo.additionalDetails3;
+}
+
+function getUserData() {
+    const userData = localStorage.getItem('sellerUser');
+    return userData ? JSON.parse(userData) : null;
+}
+
+function getBusinessInfo() {
+    const businessInfo = localStorage.getItem('businessInfo');
+    return businessInfo ? JSON.parse(businessInfo) : null;
+}
+
+function getShippingInfo() {
+    const shippingInfo = localStorage.getItem('shippingInfo');
+    return shippingInfo ? JSON.parse(shippingInfo) : null;
+}
+
+function getPaymentInfo() {
+    const paymentInfo = localStorage.getItem('paymentInfo');
+    return paymentInfo ? JSON.parse(paymentInfo) : null;
+}
+
+function getAdditionalInfo() {
+    const additionalInfo = localStorage.getItem('additionalInfo');
+    return additionalInfo ? JSON.parse(additionalInfo) : null;
+}
+
+function redirectToPage(url) {
+    window.location.href = url;
+}
+
+function goToDashboard() {
+    window.location.href = 'dashboard.html';
+}
+
     </script>
+
+    <script src="seller_homepage.js"></script>
 </body>
 </html>
