--- a/Index.html
+++ b/Index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Welcome to ShoeTrade</title>
+    <link rel="stylesheet" href="styles.css">
     <style>
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -12,8 +13,8 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            min-height: 100vh;
-            background: linear-gradient(135deg, #1abc9c, #16a085);
+            height: 100vh;
+            background-image: linear-gradient(to right bottom, #4a90e2, #9013fe);
             color: #fff;
         }
 
@@ -23,20 +24,17 @@
             justify-content: center;
             align-items: center;
             max-width: 1200px;
-            width: 90%;
+            margin: 0 auto;
             padding: 20px;
             text-align: center;
-            background: rgba(0, 0, 0, 0.5);
-            border-radius: 15px;
-            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3);
         }
 
         .header {
-            margin-bottom: 20px;
+            margin-bottom: 50px;
         }
 
         h1 {
-            font-size: 3rem;
+            font-size: 3.5rem;
             margin: 0 0 10px;
         }
 
@@ -61,7 +59,7 @@
             font-size: 1.2rem;
             text-decoration: none;
             color: #fff;
-            background-color: #e74c3c;
+            background-color: #ff6f61;
             border: none;
             border-radius: 50px;
             margin: 10px;
@@ -70,7 +68,7 @@
         }
 
         .btn:hover {
-            background-color: #c0392b;
+            background-color: #ff8a65;
             transform: translateY(-3px);
         }
 
@@ -95,7 +93,6 @@
 
         @media (max-width: 768px) {
             h1 {
-                font-size: 2.5rem;
                 font-size: 2.5rem;
             }
             .subtitle {
