--- a/seller_homepage.html
+++ b/seller_homepage.html
@@ -5,8 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Seller Homepage - Comrade-Shoes</title>
     <link rel="stylesheet" href="seller_homepage_styles.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" />
+    <script src="https://kit.fontawesome.com/a076d05399.js"></script>
     <style>
+        /* Your existing styles here */
         body {
             font-family: Arial, sans-serif;
             margin: 0;
@@ -25,7 +26,7 @@
 
         header h1 {
             margin: 0;
-            font-size: 1.2rem;
+            font-size: 1.2em; /* Adjust font size for smaller screens */
         }
 
         header .settings {
@@ -49,23 +50,15 @@
             text-decoration: none;
         }
 
-        nav a:hover {
-            background-color: #555;
-        }
-
         .container {
             padding: 20px;
-            display: flex;
-            justify-content: center;
-            flex-direction: column;
-            align-items: center;
         }
 
         .container-buttons {
             display: flex;
             flex-wrap: wrap;
             gap: 10px;
-            justify-content: center;
+            justify-content: center; /* Center buttons on smaller screens */
         }
 
         .container-button {
@@ -92,6 +85,7 @@
             padding: 10px 20px;
             font-size: 1em;
             cursor: pointer;
+            width: 200px; /* Adjust width for smaller screens */
         }
 
         #dashboardButton.inactive {
@@ -143,7 +137,7 @@
         }
 
         @media screen and (max-width: 600px) {
-            header {
+            header, nav, .container {
                 flex-direction: column;
                 align-items: center;
             }
@@ -158,21 +152,172 @@
             }
 
             .sidebar {
-                left: -100%;
-                width: 80%;
-            }
-
-            .sidebar a {
-                padding: 10px 0;
-                text-align: center;
+                width: 200px; /* Adjust sidebar width for smaller screens */
             }
         }
+        /* seller_homepage_styles.css */
+
+/* General Styles */
+body {
+    font-family: Arial, sans-serif;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+header {
+    background-color: #333;
+    color: white;
+    padding: 10px 20px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+header h1 {
+    margin: 0;
+    font-size: 1.2em; /* Adjust font size for smaller screens */
+}
+
+header .settings {
+    background: none;
+    border: none;
+    color: white;
+    font-size: 1.2em;
+    cursor: pointer;
+}
+
+nav {
+    background-color: #444;
+    display: flex;
+    justify-content: center;
+    padding: 10px;
+}
+
+nav a {
+    color: white;
+    padding: 10px;
+    text-decoration: none;
+}
+
+nav a:hover {
+    background-color: #555;
+}
+
+.container {
+    padding: 20px;
+    display: flex;
+    justify-content: center;
+}
+
+.container-buttons {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 10px;
+    justify-content: center; /* Center buttons on smaller screens */
+}
+
+.container-button {
+    background-color: #f4f4f4;
+    padding: 20px;
+    border-radius: 5px;
+    text-align: center;
+    flex: 1;
+    min-width: 200px;
+    cursor: pointer;
+}
+
+.container-button.complete {
+    background-color: #d4edda;
+}
+
+.container-button.pending {
+    background-color: #f8d7da;
+}
+
+#dashboardButton {
+    display: block;
+    margin: 20px auto;
+    padding: 10px 20px;
+    font-size: 1em;
+    cursor: pointer;
+    width: 200px; /* Adjust width for smaller screens */
+}
+
+#dashboardButton.inactive {
+    background-color: #ccc;
+    cursor: not-allowed;
+}
+
+footer {
+    background-color: #333;
+    color: white;
+    text-align: center;
+    padding: 10px 20px;
+    position: fixed;
+    width: 100%;
+    bottom: 0;
+}
+
+.sidebar {
+    position: fixed;
+    top: 0;
+    left: -250px;
+    width: 250px;
+    height: 100%;
+    background-color: #333;
+    color: white;
+    transition: left 0.3s;
+    padding: 10px;
+}
+
+.sidebar a {
+    display: block;
+    padding: 10px;
+    color: white;
+    text-decoration: none;
+}
+
+.sidebar a:hover {
+    background-color: #444;
+}
+
+#overlay {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+}
+
+@media screen and (max-width: 600px) {
+    header, nav, .container {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .container-buttons {
+        flex-direction: column;
+        width: 100%;
+    }
+
+    .container-button {
+        min-width: 100%;
+    }
+
+    .sidebar {
+        width: 200px; /* Adjust sidebar width for smaller screens */
+    }
+}
+
     </style>
 </head>
 <body>
     <header>
         <h1>Seller Homepage - Welcome back, <span id="firstName"></span> <span id="lastName"></span>!</h1>
-        <button class="settings" onclick="toggleSidebar()"><i class="fas fa-cog"></i> Settings</button>
+        <button class="settings" onclick="toggleSidebar()">⚙️ Settings</button>
     </header>
     <nav>
         <a href="index.html">Home</a>
@@ -202,8 +347,9 @@
                 <p id="additionalInfoStatus">Pending</p>
             </div>
         </div>
-        <button id="dashboardButton" class="inactive" onclick="goToDashboard()" disabled>Go to Dashboard</button>
     </div>
+    <button id="dashboardButton" class="inactive" onclick="goToDashboard()" disabled>Go to Dashboard</button>
+    
 
     <!-- Sidebar -->
     <div class="sidebar" id="sidebar">
@@ -215,7 +361,6 @@
 
     <!-- Overlay for Sidebar -->
     <div id="overlay" onclick="closeSidebar()"></div>
-    
     <script>
         document.addEventListener('DOMContentLoaded', function() {
             const user = getUserData();
@@ -301,69 +446,68 @@
         function checkShopInfo() {
             const user = getUserData();
             return user && user.firstName && user.middleName && user.lastName &&
-                   user.nationality && user.nationalId && user.phoneNumber &&
-                   user.location && user.email;
+                user.nationality && user.nationalId && user.phoneNumber &&
+                user.location && user.email;
         }
 
         function checkBusinessInfo() {
-                const businessInfo = getBusinessInfo();
-                return businessInfo && businessInfo.businessName && businessInfo.businessType &&
-                       businessInfo.businessRegistrationNumber && businessInfo.businessLocation;
-            }
+            const businessInfo = getBusinessInfo();
+            return businessInfo && businessInfo.businessName && businessInfo.businessType &&
+                businessInfo.businessRegistrationNumber && businessInfo.businessLocation;
+        }
 
-            function checkShippingInfo() {
-                const shippingInfo = getShippingInfo();
-                return shippingInfo && shippingInfo.shippingAddress && shippingInfo.shippingMethod &&
-                       shippingInfo.deliveryTime;
-            }
+        function checkShippingInfo() {
+            const shippingInfo = getShippingInfo();
+            return shippingInfo && shippingInfo.shippingAddress && shippingInfo.shippingMethod &&
+                shippingInfo.deliveryTime;
+        }
 
-            function checkPaymentInfo() {
-                const paymentInfo = getPaymentInfo();
-                return paymentInfo && paymentInfo.paymentMethod && paymentInfo.cardNumber &&
-                       paymentInfo.expiryDate && paymentInfo.securityCode;
-            }
+        function checkPaymentInfo() {
+            const paymentInfo = getPaymentInfo();
+            return paymentInfo && paymentInfo.paymentMethod && paymentInfo.cardNumber &&
+                paymentInfo.expiryDate && paymentInfo.securityCode;
+        }
 
-            function checkAdditionalInfo() {
-                const additionalInfo = getAdditionalInfo();
-                return additionalInfo && additionalInfo.additionalDetails1 &&
-                       additionalInfo.additionalDetails2 && additionalInfo.additionalDetails3;
-            }
+        function checkAdditionalInfo() {
+            const additionalInfo = getAdditionalInfo();
+            return additionalInfo && additionalInfo.additionalDetails1 &&
+                additionalInfo.additionalDetails2 && additionalInfo.additionalDetails3;
+        }
 
-            function getUserData() {
-                const userData = localStorage.getItem('sellerUser');
-                return userData ? JSON.parse(userData) : null;
-            }
+        function getUserData() {
+            const userData = localStorage.getItem('sellerUser');
+            return userData ? JSON.parse(userData) : null;
+        }
 
-            function getBusinessInfo() {
-                const businessInfo = localStorage.getItem('businessInfo');
-                return businessInfo ? JSON.parse(businessInfo) : null;
-            }
+        function getBusinessInfo() {
+            const businessInfo = localStorage.getItem('businessInfo');
+            return businessInfo ? JSON.parse(businessInfo) : null;
+        }
 
-            function getShippingInfo() {
-                const shippingInfo = localStorage.getItem('shippingInfo');
-                return shippingInfo ? JSON.parse(shippingInfo) : null;
-            }
+        function getShippingInfo() {
+            const shippingInfo = localStorage.getItem('shippingInfo');
+            return shippingInfo ? JSON.parse(shippingInfo) : null;
+        }
 
-            function getPaymentInfo() {
-                const paymentInfo = localStorage.getItem('paymentInfo');
-                return paymentInfo ? JSON.parse(paymentInfo) : null;
-            }
+        function getPaymentInfo() {
+            const paymentInfo = localStorage.getItem('paymentInfo');
+            return paymentInfo ? JSON.parse(paymentInfo) : null;
+        }
 
-            function getAdditionalInfo() {
-                const additionalInfo = localStorage.getItem('additionalInfo');
-                return additionalInfo ? JSON.parse(additionalInfo) : null;
-            }
+        function getAdditionalInfo() {
+            const additionalInfo = localStorage.getItem('additionalInfo');
+            return additionalInfo ? JSON.parse(additionalInfo) : null;
+        }
 
-            function redirectToPage(url) {
-                window.location.href = url;
-            }
+        function redirectToPage(url) {
+            window.location.href = url;
+        }
 
-            function goToDashboard() {
-                window.location.href = 'dashboard.html';
-            }
-        </script>
+        function goToDashboard() {
+            window.location.href = 'dashboard.html';
+        }
+    </script>
 
-        <script src="seller_homepage.js"></script>
-    </body>
-    </html>
-
+    <script src="seller_homepage.js"></script>
+</body>
+</html>
