--- a/seller_homepage.html
+++ b/seller_homepage.html
@@ -51,11 +51,11 @@
         }
 
         .container {
-            padding: 20px;
+            padding: 10px;
         }
 
         .container-buttons {
-            display: flex;
+            display: -webkit-inline-box;
             flex-wrap: wrap;
             gap: 10px;
             justify-content: center; /* Center buttons on smaller screens */
@@ -65,9 +65,9 @@
             background-color: #f4f4f4;
             padding: 20px;
             border-radius: 5px;
-            text-align: center;
-            flex: 1;
-            min-width: 200px;
+            text-align: left;
+            flex: 20;
+            min-width: 150px;
             cursor: pointer;
         }
 
