--- a/seller_homepage.html
+++ b/seller_homepage.html
@@ -320,9 +320,9 @@ footer {
         <button class="settings" onclick="toggleSidebar()">⚙️ Settings</button>
     </header>
     <nav>
-        <a href="index.html">Home</a>
-        <a href="about.html">About</a>
-        <a href="contact.html">Contact</a>
+        <a href="seller_homepage.html">Home</a>
+        <a href="seller_about.html">About</a>
+        <a href="seller_contact.html">Contact</a>
     </nav>
     <div class="container">
         <div class="container-buttons">
