--- a/seller_profile.html
+++ b/seller_profile.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <h1>Welcome back, <span id="firstName"></span> <span id="lastName"></span>!</h1>
+        <h1>Welcome <span id="firstName"></span> <span id="lastName"></span>!</h1>
         <div class="settings" onclick="toggleSettings()">
             <span>⚙️ Settings</span>
             <div id="sidebar">
@@ -23,11 +23,9 @@
     </header>
 
     <nav>
-        <ul>
-            <li><a href="seller_homepage.html">Home</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="contact.html">Contact Us</a></li>
-        </ul>
+            <a href="seller_homepage.html">Home</a>
+            <a href="seller_about.html">About</a>
+            <a href="seller_contact.html">Contact Us</a>
     </nav>
 
     <div class="container">
@@ -45,6 +43,10 @@
                 <div>
                     <strong>Nationality:</strong>
                     <span id="nationality"></span>
+                </div>
+                <div>
+                    <strong>national Id:</strong>
+                    <span id="nationalId"></span>
                 </div>
                 <div>
                     <strong>Phone Number:</strong>
@@ -65,7 +67,6 @@
     <footer>
         <p>&copy; 2024 Comrade-Shoes. All rights reserved.</p>
     </footer>
-
     <script>
         // Retrieve seller details from localStorage
         const sellerData = JSON.parse(localStorage.getItem('sellerUsers'));
@@ -83,11 +84,16 @@
                 document.getElementById('firstName').textContent = currentUser.firstName;
                 document.getElementById('lastName').textContent = currentUser.lastName;
                 document.getElementById('userId').textContent = currentUser.userId;
+                document.getElementById('nationalId').textContent = currentUser.nationalId;
                 document.getElementById('fullName').textContent = `${currentUser.firstName} ${currentUser.middleName} ${currentUser.lastName}`;
                 document.getElementById('nationality').textContent = currentUser.nationality;
                 document.getElementById('phoneNumber').textContent = currentUser.phoneNumber;
                 document.getElementById('location').textContent = currentUser.location;
                 document.getElementById('email').textContent = currentUser.email;
+                document.getElementById('nationalId').textContent = `${currentUser.nationalId}`;
+
+               // window.location.href= `seller_profile.html? ${userId}`
+               //alert(`you can always find your details including your userId here on your profile.success😊`);
             } else {
                 // If no user found, redirect to login page
                 window.location.href = 'seller_signin.html';
@@ -101,6 +107,17 @@
             var sidebar = document.getElementById('sidebar');
             sidebar.style.display = (sidebar.style.display === 'block') ? 'none' : 'block';
         }
+        //alert(`Successful registration. Your User ID is: ${userId}`);
+        //alert(`Dear ,${firstname} ensure to master this Username ${userId}, YOU'LL USE IT TO LOGIN TO YOUR ACCOUNT`);
+        //Check if the alert has been shown before
+        if(!
+        localStorage.getItem(`detailsalertshown`))
+        {
+            //show the alert
+            //alert(You can always find your details including your userId here on your profile...success😊');
+            //set the flage in the localstorage
+        localstorage.setitem('detailsalertshown', true);       
+    }
     </script>
-</body>
+    </body>
 </html>
