--- a/seller_profile.html
+++ b/seller_profile.html
@@ -10,22 +10,22 @@
 </head>
 <body>
     <header>
-        <h1>Welcome <span id="firstName"></span> <span id="lastName"></span>!</h1>
+        <h1>Welcome <span id="greeting"></span>!</h1>
         <div class="settings" onclick="toggleSettings()">
             <span>⚙️ Settings</span>
             <div id="sidebar">
                 <a href="seller_profile.html">Profile</a>
                 <a href="#">Change Password</a>
                 <a href="delete_seller_account.html">Delete Account</a>
-                <a href="#">Logout</a>
+                <a href="#" onclick="logout()">Logout</a>
             </div>
         </div>
     </header>
 
     <nav>
-            <a href="seller_homepage.html">Home</a>
-            <a href="seller_about.html">About</a>
-            <a href="seller_contact.html">Contact Us</a>
+        <a href="seller_homepage.html">Home</a>
+        <a href="seller_about.html">About</a>
+        <a href="seller_contact.html">Contact Us</a>
     </nav>
 
     <div class="container">
@@ -45,7 +45,7 @@
                     <span id="nationality"></span>
                 </div>
                 <div>
-                    <strong>national Id:</strong>
+                    <strong>National ID:</strong>
                     <span id="nationalId"></span>
                 </div>
                 <div>
@@ -67,6 +67,7 @@
     <footer>
         <p>&copy; 2024 Comrade-Shoes. All rights reserved.</p>
     </footer>
+
     <script>
         // Retrieve seller details from localStorage
         const sellerData = JSON.parse(localStorage.getItem('sellerUsers'));
@@ -81,19 +82,14 @@
 
             if (currentUser) {
                 // Display seller information on the page
-                document.getElementById('firstName').textContent = currentUser.firstName;
-                document.getElementById('lastName').textContent = currentUser.lastName;
+                document.getElementById('greeting').textContent = `Hello, ${currentUser.firstName} ${currentUser.lastName}`;
                 document.getElementById('userId').textContent = currentUser.userId;
-                document.getElementById('nationalId').textContent = currentUser.nationalId;
                 document.getElementById('fullName').textContent = `${currentUser.firstName} ${currentUser.middleName} ${currentUser.lastName}`;
                 document.getElementById('nationality').textContent = currentUser.nationality;
+                document.getElementById('nationalId').textContent = `${currentUser.nationalId}`;
                 document.getElementById('phoneNumber').textContent = currentUser.phoneNumber;
                 document.getElementById('location').textContent = currentUser.location;
                 document.getElementById('email').textContent = currentUser.email;
-                document.getElementById('nationalId').textContent = `${currentUser.nationalId}`;
-
-               // window.location.href= `seller_profile.html? ${userId}`
-               //alert(`you can always find your details including your userId here on your profile.success😊`);
             } else {
                 // If no user found, redirect to login page
                 window.location.href = 'seller_signin.html';
@@ -107,17 +103,18 @@
             var sidebar = document.getElementById('sidebar');
             sidebar.style.display = (sidebar.style.display === 'block') ? 'none' : 'block';
         }
-        //alert(`Successful registration. Your User ID is: ${userId}`);
-        //alert(`Dear ,${firstname} ensure to master this Username ${userId}, YOU'LL USE IT TO LOGIN TO YOUR ACCOUNT`);
-        //Check if the alert has been shown before
-        if(!
-        localStorage.getItem(`detailsalertshown`))
-        {
-            //show the alert
-            //alert(You can always find your details including your userId here on your profile...success😊');
-            //set the flage in the localstorage
-        localstorage.setitem('detailsalertshown', true);       
-    }
+
+        function logout() {
+            sessionStorage.removeItem('currentUser');
+            window.location.href = 'seller_signin.html';
+        }
+        // Get user information from local storage or session storage
+let user = JSON.parse(localStorage.getItem('currentUser'));
+
+// Display user's first and last name
+document.getElementById('firstName').innerText = user.firstName;
+document.getElementById('lastName').innerText = user.lastName;
+
     </script>
-    </body>
+</body>
 </html>
