--- a/client/seller_registration.html
+++ b/client/seller_registration.html
@@ -11,9 +11,9 @@
         <h1>Personal Details</h1>
     </header>
     <nav>
-        <a href="#index.html">Home</a>
-        <a href="#seller_about.html">About</a>
-        <a href="#seller_contact.html">Contact</a>
+        <a href="index.html">Home</a>
+        <a href="about.html">About</a>
+        <a href="contact.html">Contact</a>
     </nav>
     <div class="container">
         <section class="registration-section">
@@ -35,6 +35,7 @@
                 
                 <label for="nationality">Nationality:</label>
                 <select id="nationality" name="nationality" required>
+                    <option value="select here" datacode="">select here</option>
                     <option value="Kenya" data-code="+254">Kenyan</option>
                     <option value="Uganda" data-code="+256">Ugandan</option>
                     <option value="Tanzania" data-code="+255">Tanzanian</option>
