--- a/Index.html
+++ b/Index.html
@@ -129,12 +129,12 @@
             <p class="subtitle">Buy, Sell, or Trade Sneakers</p>
         </div>
         <div class="buttons">
-            <a href="signup_webpage.html" class="btn">Sign Up Now</a>
-            <a href="login_webpage.html" class="btn">Sign In</a>
+            <a href="/client/signup_webpage.html" class="btn">Sign Up Now</a>
+            <a href="/client/login_webpage.html" class="btn">Sign In</a>
         </div>
         <p class="info">Discover a community passionate about sneakers.</p>
         <div class="image-container">
-            <img src="shoes.jpg" alt="Shoes" class="shoes-image">
+            <img src="/client/shoes.jpg" alt="Shoes" class="shoes-image">
         </div>
     </div>
 </body>
