--- a/client/Shoe-web/Mens.html
+++ b/client/Shoe-web/Mens.html
@@ -147,8 +147,8 @@
             <button id="searchButton" class="search-button">Search</button>
         </div>
         <div class="shoe-img-container">
-            <a href="/Shoe-web/Payment method.html">
-                <img src="/Shoe images/Leather 2.jpeg" alt="Leather Shoes" class="shoe-img">
+            <a href="/client/Shoe-web/Payment method.html">
+                <img src="/client/Shoe images/Leather 2.jpeg" alt="Leather Shoes" class="shoe-img">
                 <div class="overlay">
                     <h3>Leather Shoes</h3>
                     <p>Price: $99</p>
@@ -156,8 +156,8 @@
             </a>
         </div>
         <div class="shoe-img-container">
-            <a href="/Shoe-web/Payment method.html">
-                <img src="/Shoe images/Leather1.jpeg" alt="Leather Shoes" class="shoe-img">
+            <a href="/client/Shoe-web/Payment method.html">
+                <img src="/client/Shoe images/Leather1.jpeg" alt="Leather Shoes" class="shoe-img">
                 <div class="overlay">
                     <h3>Leather Shoes</h3>
                     <p>Price: $89</p>
@@ -165,8 +165,8 @@
             </a>
         </div>
         <div class="shoe-img-container">
-            <a href="/Shoe-web/Payment method.html">
-                <img src="/Shoe images/NIKE.jpeg" alt="Nike Shoes" class="shoe-img">
+            <a href="/client/Shoe-web/Payment method.html">
+                <img src="/client/Shoe images/NIKE.jpeg" alt="Nike Shoes" class="shoe-img">
                 <div class="overlay">
                     <h3>Nike Shoes</h3>
                     <p>Price: $129</p>
@@ -174,8 +174,8 @@
             </a>
         </div>
         <div class="shoe-img-container">
-            <a href="/Shoe-web/Payment method.html">
-                <img src="/Shoe images/Campus shoes.jpeg" alt="Campus Shoes" class="shoe-img">
+            <a href="/client/Shoe-web/Payment method.html">
+                <img src="/client/Shoe images/Campus shoes.jpeg" alt="Campus Shoes" class="shoe-img">
                 <div class="overlay">
                     <h3>Campus Shoes</h3>
                     <p>Price: $109</p>
