--- a/client/seller_about.html
+++ b/client/seller_about.html
@@ -197,19 +197,19 @@
         </section>
         <section class="team">
             <div class="team-member">
-                <img src="/Shoe-web/David..jpg" alt="Team Member 1">
+                <img src="/client/Shoe-web/David..jpg" alt="Team Member 1">
                 <h3>David kiamba</h3>
                 <p>Founder & CEO</p>
             </div>
             <div class="team-member">
-                <img src="/Shoe-web/Natalie.B.jpg" alt="Team Member 2">
+                <img src="/client/Shoe-web/Natalie.B.jpg" alt="Team Member 2">
                 <h3>Natalie Blessing</h3>
                 <p>Chief Marketing Officer</p>
             </div>
             <div class="team-member">
-                <img src="/Shoe-web/meshack.jpg" alt="Team Member 3">
+                <img src="/client/Shoe-web/meshack.jpg" alt="Team Member 3">
                 <h3>Meshack Odondi</h3>
-                <p>Senior Security analyst</p>
+                <p>Managing Director(MD)</p>
             </div>
         </section>
     </div>
