--- a/client/seller_intropage.html
+++ b/client/seller_intropage.html
@@ -166,7 +166,7 @@
     }
 }
   </style>
-</head>c
+</head>
 <body>
     <header>
         <h1>Comrade-Shoes</h1>
@@ -182,7 +182,7 @@
             <p>NAIROBI-KENYA</p>
             <h3>Your customers are here..</h3>
                  <h1>why aren't you</h1>
-            <img src="/Shoe images/Shoe collection.webp" alt="Shoe Collection">
+            <img src="/client/Shoe images/Shoe collection.webp" alt="Shoe Collection">
         </section>
         <div class="buttons">
             <button onclick="window.location.href='seller_registration.html'">START SELLING</button>
